# alphamole

./: .cookiecutter.json  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: constraints.txt  tests.yml
docs/: conf.py  index.md  reference.md  usage.md
src/advancedlabcourse_utils/pymol/: chainbows_and_bfactors.py  remove_gly.py
src/alphamole/: __init__.py  __main__.py  alter_chains.py  chainbows_and_bfactors.py  color_prots.py  constants.py  remove_gly.py  remove_gly_linker.py  super_pdbs.py
tests/: __init__.py  test_main.py
