[tool.poetry]
name = "alphamole"
version = "0.1.1"
description = "Alphamole"
authors = ["Marc Broghammer <marc.broghammer@gmx.de>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/marc-commits/alphamole"
repository = "https://github.com/marc-commits/alphamole"
documentation = "https://alphamole.readthedocs.io"
classifiers = [
    "Development Status :: 1 - Planning",
]

[tool.poetry.urls]
Changelog = "https://github.com/marc-commits/alphamole/releases"

[tool.poetry.dependencies]
python = "^3.9"
click = ">=8.0.1"
pymol = {path = "bin/pymol-2.6.0a0-cp39-cp39-win_amd64.whl"}
more-itertools = "^8.12.0"

[tool.poetry.dev-dependencies]
Pygments = ">=2.10.0"
bandit = "!=1.7.3,!=1.7.4"
black = ">=21.10b0"
coverage = {extras = ["toml"], version = ">=6.2"}
darglint = ">=1.8.1"
flake8 = ">=4.0.1"
flake8-bandit = ">=2.1.2"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
furo = ">=2021.11.12"
isort = ">=5.10.1"
mypy = ">=0.930"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=6.2.5"
pyupgrade = ">=2.29.1"
safety = ">=1.10.3"
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = ">=3.0.2"
typeguard = ">=2.13.3"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}
myst-parser = {version = ">=0.16.1"}
setuptools = ">=60.10.0"

[tool.poetry.scripts]
alphamole = "alphamole.__main__:main"
super_pdbs = "alphamole.super_pdbs:super_pdbs"
chainbows_and_bfactors = "alphamole.chainbows_and_bfactors:chainbows_and_bfactors"
remove_gly_linker = "alphamole.remove_gly_linker:remove_gly_linker"
alter_chains = "alphamole.alter_chains:alter_chains"
color_prots = "alphamole.color_prots:color_prots"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["alphamole", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
